--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -50,8 +50,9 @@
           </div>
         </div>
         <div class="col-12 col-md-5 text-end">
-          <button class="btn btn-link btn-navigation btn-navigation--violet btn-navigation--small btn-navigation--left" (click)="back()">anterior</button>
-          <button class="btn btn-link btn-navigation btn-navigation--violet" (click)="continue()">continuar</button>
+          <button class="btn btn-link btn-navigation btn-navigation--violet-left btn-navigation--small"
+                  (click)="back()"></button>
+          <button class="btn btn-link btn-navigation btn-navigation--violet-right" (click)="continue()"></button>
         </div>
       </div>
     </div>
