--- a/src/app/final-screen/final-screen.component.html
+++ b/src/app/final-screen/final-screen.component.html
@@ -20,7 +20,10 @@
         </button>
       </div>
       <div class="col-12 col-md-5 text-end">
-        <button class="btn btn-link btn-navigation btn-navigation--white btn-navigation--small btn-navigation--left" (click)="back()">anterior</button>
+        <button class="btn btn-link btn-navigation btn-navigation--white btn-navigation--small btn-navigation--left"
+                (click)="back()">
+          anterior
+        </button>
         <button class="btn btn-link btn-navigation btn-navigation--white" (click)="start()">Volver al inicio</button>
       </div>
     </div>
