--- a/src/app/flux-choice-one/flux-choice-one.component.html
+++ b/src/app/flux-choice-one/flux-choice-one.component.html
@@ -40,10 +40,12 @@
   </div>
   <div class="row">
     <div class="col-12 col-sm-5 offset-sm-1">
-      <a class="btn-navigation btn-navigation--violet" (click)="goBack()">anterior</a>
+      <button class="btn btn-link btn-navigation btn-navigation--violet-left"
+              (click)="goBack()"></button>
     </div>
     <div class="col-12 col-sm-5 text-end">
-      <a class="btn-navigation btn-navigation--violet" (click)="continue()">continuar</a>
+      <button class="btn btn-link btn-navigation btn-navigation--violet-right"
+         (click)="continue()"></button>
     </div>
   </div>
 </div>
