--- a/src/app/flux-choice-two/flux-choice-two.component.html
+++ b/src/app/flux-choice-two/flux-choice-two.component.html
@@ -35,11 +35,13 @@
           </div>
         </div>
         <div class="flux-two__btn-next text-center">
-          <a class="btn-navigation btn-navigation--violet" (click)="showMiniLoading()">continuar</a>
+          <button class="btn btn-link btn-navigation btn-navigation--violet-right"
+                  (click)="showMiniLoading()"></button>
         </div>
       </div>
       <div class="flux-two__btn-back">
-        <a class="btn-navigation btn-navigation--violet" (click)="goBack()">anterior</a>
+        <button class="btn btn-link btn-navigation btn-navigation--violet-left"
+                (click)="goBack()"></button>
       </div>
     </div>
     <div class="col-12 col-md-5 flux-two__right-col">
