--- a/src/app/flux-choice/flux-choice.component.html
+++ b/src/app/flux-choice/flux-choice.component.html
@@ -36,7 +36,8 @@
   </div>
   <div class="row">
     <div class="col-12 col-sm-5 offset-sm-1">
-      <a class="btn-navigation btn-navigation--violet" (click)="goBack()">anterior</a>
+      <button class="btn btn-link btn-navigation btn-navigation--violet-left"
+              (click)="goBack()"></button>
     </div>
   </div>
 </div>
