--- a/src/app/loading-screen/loading-screen.component.html
+++ b/src/app/loading-screen/loading-screen.component.html
@@ -23,7 +23,8 @@
   </div>
   <div class="row loading-screen__row">
     <div class="col-12 loading-screen__btn text-end">
-      <a class="btn-navigation btn-navigation--white" (click)="continue()">continuar</a>
+      <button class="btn btn-link btn-navigation btn-navigation--white-right"
+              (click)="continue()"></button>
     </div>
   </div>
 </div>
