--- a/src/app/mini-loading/mini-loading.component.html
+++ b/src/app/mini-loading/mini-loading.component.html
@@ -4,6 +4,7 @@
   </div>
   <div class="mini-loading__icon rotate-center"></div>
   <div class="mini-loading__btn">
-    <button class="btn btn-link btn-navigation btn-navigation--violet" (click)="continue()">listo</button>
+    <button class="btn btn-link btn-navigation btn-navigation--violet-right"
+            (click)="continue()"></button>
   </div>
 </div>
