--- a/src/app/mini-result/mini-result.component.html
+++ b/src/app/mini-result/mini-result.component.html
@@ -9,5 +9,6 @@
     necesario hacer una verificación<br>
     detallada y personal.
   </div>
-  <button class="btn btn-link btn-navigation btn-navigation--violet" (click)="continue()">continuar</button>
+  <button class="btn btn-link btn-navigation btn-navigation--violet-right"
+          (click)="continue()"></button>
 </div>
