--- a/src/app/welcome-screen-two/welcome-screen-two.component.html
+++ b/src/app/welcome-screen-two/welcome-screen-two.component.html
@@ -16,7 +16,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-12 col-md-11 text-end">
-        <button class="btn btn-link btn-navigation btn-navigation--white" (click)="continue()">continuar</button>
+        <button class="btn btn-link btn-navigation btn-navigation--white-right" (click)="continue()"></button>
       </div>
     </div>
   </div>
