--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -108,6 +108,17 @@ p
     &::placeholder
       color: #707070
       opacity: 0.33
+    &[type='file']
+      display: none
+  &__upload-button
+    background: #E4E4E47A 0% 0% no-repeat padding-box
+    border: 1px solid #98989829
+    border-radius: 35px
+    height: 52px
+    width: 225px
+    font-size: 20px
+    font-family: Montserrat-SemiBold, sans-serif
+    color: rgba(112, 112, 112, 0.33)
 
 .lup-checkbox
   background: #FFFFFF 0% 0% no-repeat padding-box
