--- a/src/app/result-screen/result-screen.component.html
+++ b/src/app/result-screen/result-screen.component.html
@@ -2,28 +2,47 @@
   [fluxTitle]="header"
   [fluxStep]="2">
 </app-flux-status-header>
-<div class="container result-screen__container">
+<div class="container-fluid result-screen__container">
   <div class="row">
-    <div class="col-12">
+    <div class="col-12 {{textAlignmentClass}} result-screen__col"
+      [class.result-screen__col--success]="">
       <div class="result-screen__title-container">
-        <div class="result-screen__title text-center">
-          {{title}}
-        </div>
-        <div class="result-screen__subtitle text-center">
-          {{subtitle}}
-        </div>
-        <button class="btn btn-link btn-navigation--go"
-          (click)="continue()">¿Deseas continuar con el proceso?
-        </button>
+        <div class="result-screen__title"
+             [innerHTML]="title"
+             [class.result-screen__title--success]="isSuccess"></div>
+        <div class="result-screen__subtitle"
+             [innerHTML]="subtitle"
+             [class.result-screen__subtitle--success]="isSuccess"></div>
       </div>
     </div>
+    <div *ngIf="isSuccess" class="col-md-5 text-end result-screen__charge-col">
+      <div class="result-screen__charge-container text-center">
+        <div class="result-screen__charge-title">
+          Tu tarifa aproximada es:
+        </div>
+        <div class="result-screen__charge-amount">
+          {{amount}}
+        </div>
+        <div class="result-screen__charge-savings">
+          un <span class="openSansBold">{{savings}}%</span> menor a la actual
+        </div>
+        <div class="result-screen__charge-savings">
+          Además, ¡en <span class="openSansBold">7 años</span> el sistema<br>
+          solar será completamente tuyo!
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-12">
+    <button class="btn btn-link btn-navigation btn-navigation--go"
+            (click)="continue()"></button>
   </div>
 </div>
 <div class="container-fluid">
   <div class="row">
     <div class="col-12 offset-md-1">
       <button class="btn btn-link btn-navigation btn-navigation--violet-left"
-              (click)="back()"></button>
+              (click)="back()"> </button>
     </div>
   </div>
 </div>
