--- a/src/app/flux-choice-one/flux-choice-one.component.html
+++ b/src/app/flux-choice-one/flux-choice-one.component.html
@@ -18,21 +18,40 @@
             <label for="input1">
               Nombre de la empresa
             </label>
-            <input id="input1" class="lup-form__input" type="number"/>
+            <input id="input1"
+                   class="lup-form__input"
+                   type="text"
+                   maxlength="21"
+                   [(ngModel)]="companyName"
+            />
           </div>
           <div class="lup-form__field">
             <label for="input2">
               ¿Cuánta energía <span class="color-lup--yellow">mensual</span> generaría<br/>
               tu proyecto en kilovatio/hora <span class="color-lup--violet-light">(kWh)</span>?
             </label>
-            <input id="input2" class="lup-form__input" type="number" placeholder="181kWh"/>
+            <input id="input2"
+                   class="lup-form__input"
+                   type="text"
+                   placeholder="181kWh"
+                   inputmode="numeric"
+                   pattern="[0-9]*"
+                   digitOnly
+                   [(ngModel)]="monthlyEnergy"/>
           </div>
           <div class="lup-form__field">
             <label for="input3">
               Ingresa el precio total<br/>
               del proyecto a financiar
             </label>
-            <input id="input3" class="lup-form__input" type="number" placeholder="25'500,000"/>
+            <input id="input3"
+                   class="lup-form__input"
+                   type="text"
+                   placeholder="25'500,000"
+                   inputmode="numeric"
+                   pattern="[0-9]*"
+                   digitOnly
+                   [(ngModel)]="totalPrice"/>
           </div>
         </div>
       </div>
@@ -43,7 +62,7 @@
       <button class="btn btn-link btn-navigation btn-navigation--violet-left"
               (click)="goBack()"></button>
     </div>
-    <div class="col-12 col-sm-5 text-end">
+    <div class="col-12 col-sm-5 text-end" *ngIf="isValidData()">
       <button class="btn btn-link btn-navigation btn-navigation--violet-right"
          (click)="continue()"></button>
     </div>
