--- a/src/app/initial-data/initial-data.component.sass
+++ b/src/app/initial-data/initial-data.component.sass
@@ -3,37 +3,17 @@
 .initial-data
   &__container
     position: relative
+    height: 100vh
+    width: 100vw
     >*
       position: absolute
-      height: 100vh
-      width: 100vw
+      width: 100%
   &__screen
     &-3, &-4, &-5, &-6, &-8, &-9, &-11
       background: white
-    &-3
-      .container-fluid
-        margin-top: 117px
-      &__description-1, &__description-2
-        font-family: "Open Sans", sans-serif
-      &__description-1
-        font-size: 25px
-        color: $lup-dark-grey
-      &__description-2
-        color: $lup-violet-light
-        font-size: 20px
-        margin-bottom: 62px
-      &__description-3
-        display: flex
-        justify-content: flex-end
-        &--image
-          @include bill
-          width: 318px
-          height: 330px
     &-1, &-2, &-7, &-10, &-13
       background: transparent linear-gradient(270deg, #510CA8 0%, #2B054A 100%) 0% 0% no-repeat padding-box
 
 // overrides
 .lup-form__input
   width: 352px
-.lup-checkbox
-  margin-bottom: 72px
