--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -9,31 +9,51 @@
           <label for="input1">
             Nombre completo
           </label>
-          <input id="input1" class="lup-form__input" type="number"/>
+          <input id="input1"
+                 class="lup-form__input"
+                 type="text"
+                 [(ngModel)]="name"/>
         </div>
         <div class="lup-form__field">
           <label for="input2">
             Celular
           </label>
-          <input id="input2" class="lup-form__input" type="number"/>
+          <input id="input2"
+                 class="lup-form__input"
+                 type="text"
+                 inputmode="numeric"
+                 pattern="[0-9]*"
+                 digitOnly
+                 maxlength="10"
+                 [(ngModel)]="cellphone"/>
         </div>
         <div class="lup-form__field">
           <label for="input3">
             E-mail
           </label>
-          <input id="input3" class="lup-form__input" type="number"/>
+          <input id="input3"
+                 class="lup-form__input"
+                 type="email"
+                 [(ngModel)]="email"/>
         </div>
         <div class="lup-form__field">
           <label for="input4">
             País
           </label>
-          <input id="input4" class="lup-form__input" type="number"/>
+          <input id="input4"
+                 class="lup-form__input"
+                 type="number"
+                 [(ngModel)]="country" />
         </div>
         <div class="lup-form__field">
           <label for="input5">
             Dirección
           </label>
-          <input id="input5" class="lup-form__input" type="number" placeholder="Carr 00a #00a 00"/>
+          <input id="input5"
+                 class="lup-form__input"
+                 type="number"
+                 placeholder="Carr 00a #00a 00"
+                [(ngModel)]="address"/>
         </div>
         <div class="lup-form__field">
           <label for="inputFile1">
@@ -44,7 +64,7 @@
           <button
             class="lup-form__upload-button"
             (click)="captureFile(1);"
-          >PDF, JPG, PNG</button>
+            >PDF, JPG, PNG</button>
         </div>
         <div class="lup-form__field">
           <label for="inputFile2">
@@ -64,7 +84,7 @@
       <div class="row">
         <div class="col-12 offset-md-1 col-md-5">
           <div class="lup-checkbox">
-            <input type="radio" id="dataTreatment"
+            <input type="checkbox" id="dataTreatment"
                    name="nature" value="dataTreatment">
             <label for="dataTreatment">
               Acepto las políticas de tratamiento de datos
@@ -72,9 +92,11 @@
           </div>
         </div>
         <div class="col-12 col-md-5 text-end">
-          <button class="btn btn-link btn-navigation btn-navigation--violet-left btn-navigation--small"
+          <button class="btn btn-link btn-navigation btn-navigation--violet-left"
                   (click)="back()"></button>
-          <button class="btn btn-link btn-navigation btn-navigation--violet-right" (click)="continue()"></button>
+          <button class="btn btn-link btn-navigation btn-navigation--violet-right"
+                  (click)="continue()"
+                  *ngIf="isValidData()"></button>
         </div>
       </div>
     </div>
