--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -36,7 +36,7 @@
                  type="email"
                  [(ngModel)]="email"/>
         </div>
-        <div class="lup-form__field">
+        <div class="lup-form__field" *ngIf="false">
           <label for="input4">
             País
           </label>
@@ -45,7 +45,7 @@
                  type="number"
                  [(ngModel)]="country" />
         </div>
-        <div class="lup-form__field">
+        <div class="lup-form__field" *ngIf="false">
           <label for="input5">
             Dirección
           </label>
