--- a/src/app/flux-choice-one/flux-choice-one.component.sass
+++ b/src/app/flux-choice-one/flux-choice-one.component.sass
@@ -1,7 +1,6 @@
 @import "src/styles/styles"
 
 .flux-one
-  color: $lup-violet-dark
   &__header
     color: $lup-violet-dark
     letter-spacing: 0.43px
@@ -18,3 +17,9 @@
     flex-direction: column
     align-items: center
     width: 70%
+
+// overrides
+.color-lup--yellow
+  color: $lup-yellow !important
+.color-lup--violet-light
+  color: $lup-violet-light !important
