--- a/src/app/welcome-screen-two/welcome-screen-two.component.html
+++ b/src/app/welcome-screen-two/welcome-screen-two.component.html
@@ -9,7 +9,7 @@
   <div class="welcome-two__icon"></div>
   <div class="welcome-two__title">Recuerda</div>
   <div class="welcome-two__subtitle text-center">
-    Debes tener a la mano tu factura de servicios públicos<br/>
+    Debes tener a la mano tu <span class="openSansBold">factura de servicios públicos</span><br/>
     más reciente, allí encontrarás la información necesaria<br/>
     para responder las siguientes preguntas
   </div>
