--- a/src/app/initial-data/initial-data.component.sass
+++ b/src/app/initial-data/initial-data.component.sass
@@ -8,6 +8,7 @@
     >*
       position: absolute
       width: 100%
+      height: 100vh
   &__screen
     &-3, &-4, &-5, &-6, &-8, &-9, &-11
       background: white
