--- a/src/app/result-screen/result-screen.component.sass
+++ b/src/app/result-screen/result-screen.component.sass
@@ -4,26 +4,29 @@
   &__col
     display: flex
     flex-direction: column
-    justify-content: center
     &--success
+      text-align: center
       align-items: flex-start
   &__container
-    margin-top: 175px
+    margin-top: 100px
   &__title-container
     display: flex
     flex-direction: column
-    align-items: center
     justify-content: center
+    &--not-success
+      align-items: center
   &__title
     color: $lup-violet-dark
     font-family: Montserrat-Bold, sans-serif
     font-size: 50px
     max-width: 1024px
-    height: 244px
+    height: 212px
     text-align: center
     &--success
       font-size: 42px
       text-align: left
+    &--not-success
+      margin-bottom: 40px
   &__subtitle
     color: $lup-dark-grey
     font-family: "Open Sans", sans-serif
@@ -32,6 +35,21 @@
     &--success
       font-size: 37px
       text-align: left
+  &__warning
+    display: flex
+    flex-direction: row
+    align-items: center
+    margin-top: 24px
+    text-align: left
+    &-icon
+      @include yellow-warning
+      height: 48px
+      width: 48px
+      margin-right: 38px
+    &-text
+      color: #2F0A60
+      font-family: "Open Sans", sans-serif
+      font-size: 22px
   &__charge
     &-col
       display: flex
