--- a/src/app/result-screen/result-screen.component.html
+++ b/src/app/result-screen/result-screen.component.html
@@ -34,7 +34,7 @@
           un <span class="openSansBold">{{savings}}%</span> menor a la actual
         </div>
         <div class="result-screen__charge-savings">
-          Además, ¡en <span class="openSansBold">7 años</span> el sistema<br>
+          Además, ¡en <span class="openSansBold">{{time}} años</span> el sistema<br>
           solar será completamente tuyo!
         </div>
       </div>
