--- a/src/app/flux-choice-two/flux-choice-two.component.html
+++ b/src/app/flux-choice-two/flux-choice-two.component.html
@@ -4,7 +4,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-12 offset-md-1 col-md-10">
-      <div class="flux-two__header">No tengo una cotización</div>
+      <div class="flux-two__header">Ayúdanos a modelar tu sistema solar</div>
     </div>
   </div>
   <div class="row">
@@ -16,7 +16,10 @@
         <div class="flux-two__question">
           <div class="flux-two__options">
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+              <input class="form-check-input"
+                     type="radio"
+                     name="flexRadioDefault"
+                     id="flexRadioDefault1">
               <label class="form-check-label" for="flexRadioDefault1">
                 Sí ¿Cuánto?
               </label>
@@ -30,7 +33,14 @@
           </div>
           <div class="flux-two__optional-answer">
             <div class="lup-form">
-              <input id="input1" class="" type="number"/>
+              <input id="input1"
+                     class=""
+                     type="text"
+                     inputmode="numeric"
+                     pattern="[0-9]*"
+                     digitOnly
+                     [(ngModel)]="area"
+              />
             </div>
           </div>
         </div>
