--- a/src/app/initial-data/initial-data.component.html
+++ b/src/app/initial-data/initial-data.component.html
@@ -45,7 +45,9 @@
       [subtitle]="resultText.subtitle"
       (onBack)="goToScreen(8, 3)"
       [isSuccess]="resultText.isSuccess"
-      [time]="lupResponse.time">
+      [time]="lupResponse.time"
+      [discount]="lupResponse.discount"
+      [energyRateWithDiscount]="lupResponse.energyRateWithDiscount">
     </app-result-screen>
   </div>
 
